package com.ecommerce.order.domain.model;

public enum EstadoEnvio {
    PENDIENTE,
    EN_TRANSITO,
    ENTREGADO,
    DEVUELTO
}
