package com.ecommerce.order.domain.model;

public enum TipoDescuento {
    PORCENTAJE,
    MONTO_FIJO
}
