package com.ecommerce.user.domain.model;

public enum TipoUsuario {
    CLIENTE,
    ADMINISTRADOR,
    VENDEDOR
}
